# pinspect

./: CMakeLists.txt  Doxyfile  OpenCV-LICENSE  README  parameters.xml  run_inspection.rb
results/: cornerDetection.xml  gridFitting.xml  leftCamera.xml  rectifyMaps.xml  refinement.xml  rightCamera.xml  stereoCamera.xml
src/: Calibration.cpp  CalibrationSet.cpp  Circlesgrid.cpp  Inspection.cpp  Main.cpp  Parameters.cpp  Pipeline.cpp
src/include/: Calibration.hpp  CalibrationSet.hpp  Circlesgrid.hpp  Inspection.hpp  Parameters.hpp  Pipeline.hpp  ProcessingStage.hpp  ResultConnector.hpp
